--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -322,11 +322,11 @@
  FEDERATION_XP_UNLOCKS:0 "§HXP ที่ใช้ปลดล็อกเลเวล§!"
  FEDERATION_LEVEL_UNLOCK:0 "	LVL $LEVEL$: $XP|Y0$ xp"
  FEDERATION_EXPERIENCE_DESC:0 "§E§HFederation Experience§! increases as the federation remains unified. It will decrease as we become more divided.\n§HNew Perks and Abilities§! are gained as new §HLevels§! are unlocked with §HXP§!§!"
- FEDERATION_ENVOYS:1 "Representatives"
- FEDERATION_ENVOYS_COHESION:1 "Total Representatives: $ENVOYS|+0$\n	Cohesion Impact: $IMPACT|+2$"
+ FEDERATION_ENVOYS:1 "ผู้แทน"
+ FEDERATION_ENVOYS_COHESION:1 "ผู้แทนทั้งหมด: $ENVOYS|+0$\n	มีผลต่อความสัมพันธ์ในสหพันธ์: $IMPACT|+2$"
  FEDERATION_ENVOYS_COUNTRY:0 "	$NAME$: $COUNT|Y0$"
- FEDERATION_ENVOYS_CONTRIBUTORS:1 "§ERepresentative Contributors:§! ($VALUE|Y$)"
- FEDERATION_ENVOYS_SLACKERS:0 "Members Not Contributing:"
+ FEDERATION_ENVOYS_CONTRIBUTORS:1 "§Eตัวแทนผู้มีส่วนร่วม:§! ($VALUE|Y$)"
+ FEDERATION_ENVOYS_SLACKERS:0 "สมาชิกที่ไม่มีส่วนร่วม:"
  FEDERATION_ENVOYS_SLACKER:0 "	$NAME|R$"
  FEDERATION_ENVOYS_DESC:0 "§E§HRepresentatives§! are Officials from members within the federation. They boost §HFederation Cohesion§! by working hard to keep our federation unified.§!"
  FEDERATION_LEVEL_PERKS_DESC:0 "§Eเลเวล $LEVEL$:§!"
@@ -753,10 +753,10 @@
  damage_crisis_2_desc:0 "หากเราตั้งใจที่จะครอบครองอำนาจโดยคุณธรรมในการปกครอง เราจำเป็นต้องแสดงให้กาแล็กซีให้เห็นว่าเราไม่เพียงแต่มีเจตจำนงที่จะปกป้องจากภัยคุกคามภายนอกเท่านั้นแต่ยังมีภัยร้ายอื่นที่รอเราอยู่"
  envoy_unity_1:0 "ผู้ช่วยทูตของรัฐบาลกลาง"
  envoy_unity_1_desc:0 "ตุลาการ(ผู้ตัดสินชี้ขาด)ของวาระการประชุมสหพันธ์ - ทูตของเรา - มีความเข้าใจและกระตือรือร้นในการพยายามปรับปรุงความรู้สึกเป็นเจ้าของและผลประโยชน์ร่วมกันระหว่างสมาชิกของเรา"
- envoy_unity_1_effect:2 "Gain §Y2§! Unity and §Y5%§! Trust Growth for each Official assigned to the federation by any member."
+ envoy_unity_1_effect:2 "เจ้าหน้าที่แต่ละคนที่ได้รับการแต่งตั้งให้ประจำอยู่ที่สหพันธ์จะได้รับเอกภาพเพิ่ม §Y2§! และความเชื่อใจเพิ่ม §Y5%§!"
  envoy_unity_2:0 "ความสามัคคีของรัฐบาลกลาง"
  envoy_unity_2_desc:1 "ทูตของเราทำงานอย่างไม่หยุดยั้งเพื่อส่งเสริมสนับสนุนวาระและวัตถุประสงค์ของสหพันธ์ สร้างแรงบันดาลใจให้เกิดความสัมพันธ์อันดีและความเชื่อมั่นทั่วทั้งกาแล็กซี"
- envoy_unity_2_effect:1 "Gain §Y2§! Unity and raise Trust Cap by §Y5§! for each Official assigned to the federation by any member."
+ envoy_unity_2_effect:1 "เจ้าหน้าที่แต่ละคนที่ได้รับการแต่งตั้งให้ประจำอยู่ที่สหพันธ์จะได้รับเอกภาพเพิ่ม §Y2§! และเพิ่มเพดานความเชื่อใจ §Y5§!"
  cohesion_join_1:0 "ต้อนรับสมาชิกใหม่"
  cohesion_join_1_desc:0 "โดยไม่คำนึงถึงความแตกต่างทางวัฒนธรรมหรือทางชีวภาพ การเติบโตของสหพันธ์เป็นผลประโยชน์ของทุกคน"
  cohesion_join_1_effect:0 "โทษ(ความสัมพันธ์ในสหพันธ์)จากการรับสมาชิกใหม่ของสหพันธ์ลดลง §Y50%§!"
