--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -2864,11 +2864,11 @@
  FLAG_CATEGORY_domination:0 "การมีอำนาจเหนือกว่า"
  FLAG_CATEGORY_corporate:0 "บริษัท"
  FLAG_CATEGORY_imperial:0 "อิมพีเรียล"
- FLAG_CATEGORY_aquatic:0 "Aquatic"
- FLAG_CATEGORY_necroid:0 "Necroid"
+ FLAG_CATEGORY_aquatic:0 "น้ำ"
+ FLAG_CATEGORY_necroid:0 "เนครอยด์"
  FLAG_CATEGORY_lithoid:0 "หิน"
  FLAG_CATEGORY_plantoid:0 "พืช"
- FLAG_CATEGORY_toxoid:1 "Toxoid"
+ FLAG_CATEGORY_toxoid:1 "ทอกซอยด์"
  starting_weapons_lasers:0 "อาวุธพลังงาน"
  starting_weapons_projectiles:0 "อาวุธที่เป็นกระสุนปืน"
  starting_weapons_missiles:0 "อาวุธนำวิถี"
@@ -3904,7 +3904,7 @@
  trait_humanoid_psychological_infertility: "ภาวะมีบุตรยากทางจิต"
  trait_humanoid_psychological_infertility_desc: "§LMembers of this species are extremely sensitive to the rigors of conflict with the resulting stress taking over the more primal urges.§!"
  TRAIT_HUMANOID_PSYCHOLOGICAL_INFERTILITY_EFFECT: "£pops£ §Yประชากรเพิ่ม§! ในช่วงสงครามและวิกฤติไครซิส: §R-30%§!"
- trait_humanoid_jinxed: "Jinxed"
+ trait_humanoid_jinxed: "ซุ่มซ่าม,โชคร้าย"
  trait_humanoid_jinxed_desc: "§LLeaders from this species seem clumsier and more prone to accidents or vices than average, as if cursed from birth.§!"
  TRAIT_HUMANOID_JINXED_EFFECT: "Leader Maximum Negative Traits: §R+1§!"
  cannot_add_trait:0 "§RCannot add this trait.§!"
@@ -5460,7 +5460,7 @@
  NAVY_SIZE_TOOLTIP:2 "เราสามารถรองรับยานรบได้อย่างมีประสิทธิภาพซึ่งเท่ากับ $MAX|0Y$ ยูนิต ซึ่งมีประโยชน์กับ §Y$FLEET_SIZE_TITLE$§!"
  NAVY_SIZE_MAX:1 "§Rสูงสุด: $VALUE|0$§!"
  NAVY_SIZE_MAX_REACHED:1 "§Rเต็มความจุของยานรบแล้ว§!"
- MISSING_HEAD_OF_NAVY: "Missing Head of Navy"
+ MISSING_HEAD_OF_NAVY: "ขาดผู้นำกองทัพยานรบ"
  STARBASE_CAPACITY_BASE:0 "ฐาน: $VALUE$"
  STARBASE_CAPACITY_POPS_VALUE:0 "จากประชากร: $VALUE$"
  STARBASE_CAPACITY_SYSTEMS_VALUE:0 "จากระบบดาวที่เป็นเจ้าของ: $VALUE$"
@@ -5628,7 +5628,7 @@
  SHIP_DESIGN_UTILITIES_START_HELP:0 "คลิกที่ช่องอรรถประโยชน์เพื่อแสดงรายการส่วนประกอบอรรถประโยชน์"
  SHIP_DESIGN_RIGHT_CLICK_TO_CANCEL_COMPONENT_PAINT:0 "§Gคลิกขวาเพื่อลบชิ้นส่วนที่เลือก§!"
  SELECT_SHIP_OWNER:0 "Select Design Owner"
- SHIP_DISABLED:0 "Disabled, requires repairs before it can function again."
+ SHIP_DISABLED:0 "ปิดการใช้งานเนื่องจากต้องทำการซ่อมเสียก่อน จึงจะสามารถทำงานได้อีกครั้ง"
  SHIP_DISENGAGED:0 "Ship has disengaged from combat and will rejoin the fleet at the end of the battle."
  DEFAULT_BATTLESHIP:0 "ยานประจัญบานพื้นฐาน"
  DEFAULT_DESTROYER:0 "ยานพิฆาตพื้นฐาน"
@@ -5942,7 +5942,7 @@
  RESEARCH_FINISHED_TITLE:0 "การวิจัยเสร็จเรียบร้อย!"
  TECH_NEW_RESEARCH:0 "การวิจัยใหม่"
  NO_SCIENTIST:0 "ไม่ได้กำหนดนักวิทยาศาสตร์"
- MISSING_HEAD_OF_RESEARCH: "Missing Head of Research"
+ MISSING_HEAD_OF_RESEARCH: "ขาดหัวหน้าฝ่ายวิจัย"
  ASSIGN_SCIENTIST_DESC:0 "การแต่งตั้งนักวิทยาศาสตร์จะช่วยเพิ่มความเร็วในการวิจัย"
  LABEL_SELECT:0 "วิจัยเทคโนโลยี"
  MONTHS_REMAINING_TECH:0 "จำนวนเดือนที่เหลือ: $NUM|Y$"
@@ -10908,18 +10908,18 @@
  name_list_LITHOID2:0 "หิน 2"
  name_list_LITHOID3:0 "หิน 3"
  name_list_LITHOID4:0 "หิน 4"
- name_list_NECROID1:0 "Necroid 1"
- name_list_NECROID2:0 "Necroid 2"
- name_list_NECROID3:0 "Necroid 3"
- name_list_NECROID4:0 "Necroid 4"
- name_list_AQUATIC1:0 "Aquatic 1"
- name_list_AQUATIC2:0 "Aquatic 2"
- name_list_AQUATIC3:0 "Aquatic 3"
- name_list_AQUATIC4:0 "Aquatic 4"
- name_list_TOX1:1 "Toxoids 1"
- name_list_TOX2:0 "Toxoids 2"
- name_list_TOX3:0 "Toxoids 3"
- name_list_TOX4:0 "Toxoids 4"
+ name_list_NECROID1:0 "เนครอยด์ 1"
+ name_list_NECROID2:0 "เนครอยด์ 2"
+ name_list_NECROID3:0 "เนครอยด์ 3"
+ name_list_NECROID4:0 "เนครอยด์ 4"
+ name_list_AQUATIC1:0 "น้ำ 1"
+ name_list_AQUATIC2:0 "น้ำ 2"
+ name_list_AQUATIC3:0 "น้ำ 3"
+ name_list_AQUATIC4:0 "น้ำ 4"
+ name_list_TOX1:1 "ทอกซอยด์ 1"
+ name_list_TOX2:0 "ทอกซอยด์ 2"
+ name_list_TOX3:0 "ทอกซอยด์ 3"
+ name_list_TOX4:0 "ทอกซอยด์ 4"
  rep1:0 "Slender Reptilian 01"
  rep2:0 "Slender Reptilian 02"
  rep3:0 "Slender Reptilian 03"
@@ -12157,13 +12157,13 @@
  confirm_unassign_representative_desc: "The leader will stop representing our interests in the $FEDERATION|Y$ and will await a new assignment."
  unassign_representative_tooltip: "$PLANET_VIEW_LEADER_UNASSIGN$"
  LEADER_REPRESENTATIVE_FEDERATION: "Representative to $FEDERATION$"
- ASSIGN_REPRESENTATIVE: "Assign a Representative to $FEDERATION|Y$"
+ ASSIGN_REPRESENTATIVE: "แต่งตั้งผู้แทนใน $FEDERATION|Y$"
  ASSIGN_REPRESENTATIVE_TOOLTIP: "§H$ASSIGN_REPRESENTATIVE$§!\n§GClick to open the Assign Leader view§!"
  ASSIGN_REPRESENTATIVE_NOT_MEMBER_TOOLTIP: "§H$ASSIGN_DELEGATE$§!\n§RYou need to be a member of $FEDERATION$ to assign a representative§!"
  ASSIGN_REPRESENTATIVE_DELAYED: "§EAssign a Representative to $FEDERATION$ to increase its §!§HCohesion§!"
- FEDERATION_ASSIGNED_LEADERS: "Representatives assigned: $VALUE|2+=$"
+ FEDERATION_ASSIGNED_LEADERS: "ผู้แทนถูกแต่งตั้งในสหพันธ์: $VALUE|2+=$"
  FEDERATION_COUNTRY_REPRESENTATIVE: "	$COUNTRY$: $EFFECT|Y0$"
- MOD_VERSION:0 "Mod v0.71.4, Update 15/12/2023"
+ MOD_VERSION:0 "Mod v0.71.5, Update 14/01/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Astral Thread -> เส้นใยแอสทรอล / เส้นใยมิติ (ทรัพยากรใหม่)\n - Astral Rift -> รอยแยกมิติ\n - Rift Sphere -> ทรงกลมริฟ\n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
