--- a/mod/thmod/localisation/english/name_lists/name_lists_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/name_lists_l_english.yml
@@ -534,9 +534,9 @@
  PRE_LITHOID_remnant_plural:0 "$LITHOID_remnant_plural$"
  SWARM:0 "Swarm"
  EXD:0 "Extradimensionals"
- NECROID:0 "Necroid"
+ NECROID:0 "เนครอยด์"
  NECROID_desc:0 "Species Class has no effect on your Empire, but Necroid-class Species may consider other Necroids to be less alien than other Species Classes."
- NECROID_plural:0 "Necroids"
+ NECROID_plural:0 "เนครอยด์"
  NECROID_insult_01:0 "husk"
  NECROID_insult_plural_01:0 "husks"
  NECROID_compliment_01:0 "specimen"
@@ -589,9 +589,9 @@
  PRE_NECROID_remnant:0 "$NECROID_remnant$"
  PRE_NECROID_remnant_plural:0 "$NECROID_remnant_plural$"
  IMPERIAL:0 "Imperial"
- AQUATIC:0 "Aquatic"
+ AQUATIC:0 "น้ำ"
  AQUATIC_desc:0 "Species Class has no effect on your Empire, but Aquatic-class Species may consider other Aquatics to be less alien than other Species Classes."
- AQUATIC_plural:0 "Aquatics"
+ AQUATIC_plural:0 "น้ำ"
  AQUATIC_insult_01:0 "chum"
  AQUATIC_insult_plural_01:0 "fishies"
  AQUATIC_insult_02:0 "kraken"
@@ -665,9 +665,9 @@
  PRE_AQUATIC_fossil_plural:0 "$AQUATIC_fossil_plural$"
  PRE_AQUATIC_remnant:0 "$AQUATIC_remnant$"
  PRE_AQUATIC_remnant_plural:0 "$AQUATIC_remnant_plural$"
- TOX:1 "Toxoid"
+ TOX:1 "ทอกซอยด์"
  TOX_desc:1 "Species Class has no effect on your Empire, but Toxoid-class Species may consider other Toxoids to be less alien than other Species Classes."
- TOX_plural:0 "Toxoids"
+ TOX_plural:0 "ทอกซอยด์"
  TOX_insult_01:0 "scavenger"
  TOX_insult_plural_01:0 "scavengers"
  TOX_insult_02:0 "refuse defiler"
