--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -266,7 +266,7 @@
  sm_cordyceptic_reanimation_facility_desc:0 "§LNormally we have to find recently-dead subjects for our reanimation practices, but with a spawning system we can infiltrate them at an earlier stage and have a steady supply of hosts.§!\n"
  requires_tiyanki_spawning_system:0 "§RNeeds to be built in §YTiyana Vek§!, §YTiyun Ort§!, or §YAmor Alveo§!.§!"
  sm_cordyceptic_reanimation_facility_desc_modifier:0 "Will produce a §YReanimated Fleet§! every §G5 years§! when built in systems swarming with biological life."
- vo_necroid_voice:0 "Necroid"
+ vo_necroid_voice:0 "เนครอยด์"
  effect_random_owned_species:0 "Random Owned Species"
  count_owned_species_trigger:0 "Number of Owned Species$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_owned_species_all_trigger:0 "$IS_ALL_NOT$ Owned Species fulfill the following conditions"
