--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -1003,7 +1003,7 @@
  leader_trait_scholar_of_war_2_desc:0 "$leader_trait_scholar_of_war_desc$"
  trait_ruler_fortifier_2:0 "$trait_ruler_fortifier$ II"
  trait_ruler_fortifier_2_desc:0 "$trait_ruler_fortifier_desc$"
- leader_trait_armada_logistician:0 "Armada Logistician"
+ leader_trait_armada_logistician:0 "นักส่งกำลังบำรุงอาร์มาดา"
  leader_trait_armada_logistician_desc:1 "Proper logistics are at the heart of any armada. This leader knows this and maintains a strict regime to control all expenses and procure timely deliveries."
  leader_trait_armada_logistician_2:0 "$leader_trait_armada_logistician$ II"
  leader_trait_armada_logistician_2_desc:0 "$leader_trait_armada_logistician_desc$"
@@ -1038,7 +1038,7 @@
  leader_trait_juryrigger_2:0 "$leader_trait_juryrigger$ II"
  leader_trait_juryrigger_2_effect:2 "$t$ทุกๆครั้งที่ยานจักรวรรดิศัตรูถูกทำลาย:\n$tt$สุ่มยานใน £military_ship£ §Yกองยาน§!: §G$@trait_juryrigger_2_amt|%0$§! £ship_stats_hitpoints£ ฟื้น HP"
  leader_trait_juryrigger_2_desc:0 "$leader_trait_juryrigger_desc$"
- leader_trait_commanding_presence:0 "Commanding Presence"
+ leader_trait_commanding_presence:0 "อยู่ในที่ที่สามารถบังคับบัญชาได้"
  leader_trait_commanding_presence_desc:1 "This leader holds a special place in the navy, attracting the most skilled captains and logisticians."
  leader_trait_commanding_presence_2:0 "$leader_trait_commanding_presence$ II"
  leader_trait_commanding_presence_2_desc:0 "$leader_trait_commanding_presence_desc$"
@@ -1071,10 +1071,10 @@
  tier_2_suffix:0 "II"
  tier_3_suffix:0 "III"
  mod_weapon_role_artillery_weapon_damage_mult:0 "Artillery Weapon Damage"
- only_one_admiral_focus:0 "\n§YOnly one Admiral focus can be selected.§!"
+ only_one_admiral_focus:0 "\n§Yสามารถเลือกโฟกัสพลเรือเอกได้เพียงอันเดียวเท่านั้น§!"
  ESTIMATE_TEMPLATE_POWER:0 "§HFleet Power Estimate§!\n§EEstimated £military_power£ §!§HFleet Power§! §Eof these Ships, without external modifiers or Fleet Commander bonuses applied.§!"
  not_working_titan_limit_and_pick_trait_on_action:0 "§_Not working. Require titan limit modifier.§!"
- leader_trait_home_guard:0 "Home Guard"
+ leader_trait_home_guard:0 "พิทักษ์มาตุภูมิ"
  leader_trait_home_guard_desc:0 "This leader's elaborate planetary defense systems are a good preparation against enemy invasion."
  leader_trait_butcher_2:0 "$leader_trait_butcher$ II"
  leader_trait_butcher_2_desc:0 "$leader_trait_butcher_desc$"
@@ -1235,7 +1235,7 @@
  leader_trait_reverse_engineer:0 "Tech Scavenger"
  leader_trait_reverse_engineer_effect:1 "$NAVAL_BATTLE_WON_TXT$:\n$t$Chance to Steal Technology: §Y33%§!\n$t$Initial Research Progress: §G+50%§!\n$t$Valid Categories:\n$tt$£engineering_research£ §YPropulsion§!\n$tt$£physics_research£ §YParticles§!"
  leader_trait_reverse_engineer_desc:0 "Always keen on dissecting new and unknown technology, this admiral possesses broad knowledge and a flexible mind, often learning on the job when encountering more advanced opponents."
- leader_trait_supreme_admiral:0 "Armada Commander"
+ leader_trait_supreme_admiral:0 "ผู้บัญชาการอาร์มาดา"
  leader_trait_supreme_admiral_desc:1 "Excelling at logistic and strategic planning, this admiral is able to command fleets that would overburden their lesser peers."
  leader_trait_armorer:0 "Genius Armorer"
  leader_trait_armorer_desc:1 "This leader has devised new ways to harden armor. There are few weapons in the galaxy that can penetrate the hulls of ships constructed with [Root.GetHisHer] designs."
