--- a/mod/thmod/localisation/english/paragon_3_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_3_l_english.yml
@@ -649,7 +649,7 @@
  building_paragon_origin_academy_desc:0 "The Grand Academy is home to our best and brightest. Continuing to elevate their minds will benefit new leaders and allow us to educate future generations."
  mod_planet_clerks_unity_produces_add:0 "£unity£ $unity$ from £job_clerk£ $job_clerk_plural$"
  planet_clerks:0 "Clerk Jobs"
- commanding_presence:0 "Commanding Presence"
+ commanding_presence:0 "อยู่ในที่ที่สามารถบังคับบัญชาได้"
  commanding_presence_desc:0 "Through the sheer willpower of our leader, we are able to extend our empire's agenda across space, and force others to heed our command."
  paragon_origin_strengthened_government_i:0 "Strengthened Government I"
  paragon_origin_strengthened_government_i_desc:0 "Our empire has focused on creating a better-managed and more stable government."
@@ -742,7 +742,7 @@
  leader_trait_legendary_great_teacher_desc:1 "This leader displays exceptional educational skills, and will help others to reach their full potential."
  leader_trait_legendary_pious_ascet:0 "Pious Ascetic"
  leader_trait_legendary_pious_ascet_desc:0 "This leader is a model of self-discipline, and an inspiration to all."
- leader_trait_legendary_commanding_presence:0 "Commanding Presence"
+ leader_trait_legendary_commanding_presence:0 "อยู่ในที่ที่สามารถบังคับบัญชาได้"
  leader_trait_legendary_commanding_presence_desc:1 "Authority comes naturally to this leader, and few dare contest their decisions."
  leader_trait_legendary_high_king:0 "High King"
  leader_trait_legendary_high_king_desc:0 "By blood and merit, this leader earned the respect and loyalty of the other noble houses."
