--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -251,9 +251,9 @@
  trait_ruler_fortifier_2_hive_desc:0 "$trait_ruler_fortifier_hive_desc$"
  trait_ruler_fortifier_2_machine:0 "$trait_ruler_fortifier_machine$ II"
  trait_ruler_fortifier_2_machine_desc:0 "$trait_ruler_fortifier_machine_desc$"
- leader_trait_armada_logistician_hive:0 "Armada Logistician"
+ leader_trait_armada_logistician_hive:0 "นักส่งกำลังบำรุงอาร์มาดา"
  leader_trait_armada_logistician_hive_desc:1 "This node optimizes fleet upkeep with interchangeable modules between ships and repair drones."
- leader_trait_armada_logistician_machine:0 "Armada Logistician"
+ leader_trait_armada_logistician_machine:0 "นักส่งกำลังบำรุงอาร์มาดา"
  leader_trait_armada_logistician_machine_desc:1 "This unit optimizes fleet upkeep with interchangeable modules between ships and repair drones."
  leader_trait_armada_logistician_2_hive:0 "$leader_trait_armada_logistician_hive$ II"
  leader_trait_armada_logistician_2_hive_desc:0 "$leader_trait_armada_logistician_hive_desc$"
