--- a/mod/thmod/localisation/english/toxoids_l_english.yml
+++ b/mod/thmod/localisation/english/toxoids_l_english.yml
@@ -576,13 +576,13 @@
  civic_scavengers_effects:0 "Researching §YDebris§! will grant both §YResearch§! and a portion of other §YResource Costs§! of the destroyed fleet.\n§YShips§! can be salvaged from some §YDebris§!."
  civic_corporate_scavengers:1 "Refurbishment Division"
  civic_corporate_scavengers_desc:0 "$civic_scavengers_desc$"
- trait_incubator:0 "Incubators"
+ trait_incubator:0 "ผู้ฟักไข่,ผู้เพาะเลี้ยง"
  incubator_tooltip:1 "Grants between §G+30%§! and §R-10%§! Pop Growth Speed, inversely proportional to the number of pops on the planet."
  trait_incubator_desc:1 "§LWhen isolated or few in numbers, a species with this trait naturally adapts and is able to focus on procreation with an intentness others would consider extreme. However, when in large numbers, this effect is reversed, and they find reproduction more difficult.§!"
- trait_inorganic_breath:0 "Inorganic Breath"
+ trait_inorganic_breath:0 "ลมหายใจอนินทรีย์"
  inorganic_breath_tooltip:2 "Each pop working as a slave or better produces 0.02 £exotic_gases£ §Y$exotic_gases$§! per month."
  trait_inorganic_breath_desc:0 "§LThe slightly toxic digestive methods of this species have resulted in a highly exotic breath composition.§!"
- trait_noxious:0 "Noxious"
+ trait_noxious:0 "เป็นพิษ"
  noxious_tooltip:2 "Happiness to non-noxious Pops: §R$@noxious_happiness_penalty|%$§!\nHappiness per non-noxious Pop (not including Pops unaffected by Happiness): §G$@noxious_happiness_bonus|%$§! (max: §G+40%§!)"
  trait_noxious_desc:1 "§LExtremely unpleasant to be in the vicinity of, beings with this trait take vindication from being insufferable to everyone else.§!"
  noxious_stock:0 "Noxious pops cannot be livestock"
@@ -610,43 +610,43 @@
  d_venomous_insects_desc:0 "The lost broods of venomous vermin that we had hoped to extinguish during the early days of our terraforming effort."
  d_unpleasant_atmosphere_desc:1 "The disgusting taste and smell of the air are what remains of this planet's toxic past."
  d_rotten_soil_desc:1 "Even this rotten soil will be useful to us, once it has been refreshed and reinvigorated."
- trait_spliced_adaptability:0 "Spliced Adaptability"
+ trait_spliced_adaptability:0 "เร่งฮอร์โมน"
  trait_spliced_adaptability_desc:1 "§LA few genetic snips and slices here and there and they can survive nearly anywhere. The process comes with an acceptable number of deaths from side effects.§!"
  spliced_adaptability_tooltip:0 "Habitability: §G+20%§!"
  trait_juiced_power:0 "Juiced Power"
  trait_juiced_power_desc:1 "§LAdrenaline released on demand and hyper-potent growth hormones have led to a massive increase in strength. Just ignore the occasional internal tearing.§!"
  juiced_power_tooltip:1 "ผลผลิตที่เป็นทรัพยากรจากประชากรคนงาน: §G+5%§!."
- trait_crack_miner:1 "Dedicated Miner"
+ trait_crack_miner:1 "นักขุดผู้อุทิศตัว"
  trait_crack_miner_desc:0 "§LSupreme hand-eye coordination, near endless endurance and self-purifying lungs have created entire crack teams of miners. Sadly they get brittle without sunlight.§!"
  crack_miner_tooltip:0 "£minerals£ แร่จาก £pops£ งาน: §G+15%§!"
- trait_farm_hands:0 "Farm Appendages"
+ trait_farm_hands:0 "ระยางค์การเกษตร"
  trait_farm_hands_desc:1 "§LThe more appendages, the higher the farming output. Some appendages can even operate while their host is asleep. Rumors of hosts strangled by their new limbs have been deemed unfounded in our latest investigation.§!"
  farm_hands_tooltip:0 "£food£ อาหารจาก £pops£ งาน: §G+15%§!"
- trait_technical_skill:0 "Technical Talent"
+ trait_technical_skill:0 "พรสวรรค์ทางเทคนิค"
  trait_technical_skill_desc:0 "§LExtra internal organs grant a vastly increased innate sensitivity to electricity and magnetic fields. Reports of recipients hearing screams and voices from the reactors should be ignored.§!"
  technical_skill_tooltip:0 "£energy£ พลังงานจาก £pops£ งาน: §G+15%§!"
- trait_crafted_smiles:0 "Crafted Smiles"
+ trait_crafted_smiles:0 "ยิ้มศัลยกรรม"
  trait_crafted_smiles_desc:0 "§LSlightly shifted facial features, a mix of enhanced and slackened muscular development - and of course outside chemicals - have created the perfect smile. Forever.§!"
  crafted_smiles_tooltip:0 "£amenities£ ความอยู่ดีกินดีจาก £pops£ งาน: §G+15%§!"
- trait_low_maintenance:0 "Low Maintenance"
+ trait_low_maintenance:0 "ค่าเลี้ยงดูต่ำ"
  trait_low_maintenance_desc:1 "§LReduced consumption, excretion, and rest rates have resulted in twice the beings for half the price. However, demand for protein-rich meals has increased.§!"
  low_maintenance_tooltip:0 "Pop Consumer Goods Upkeep: §G-10%§!"
- trait_artificial_intelligence:1 "Augmented Intelligence"
+ trait_artificial_intelligence:1 "ปัญญาเสริม"
  trait_artificial_intelligence_desc:0 "§LMore brains equals more brain power. Extra thinking organs have been added in strategic areas of the recipient's body to ensure maximum cognitive capacity. Even if they don't always agree.§!"
  artificial_intelligence_tooltip:0 "£physics£ Physics Research: §G+10%§!\n£society£ Society Research: §G+10%§!\n£engineering£ Engineering Research: §G+10%§!"
- trait_gene_mentorship:0 "Gene Mentorship"
+ trait_gene_mentorship:0 "ที่ปรึกษาพันธุกรรม"
  trait_gene_mentorship_desc:2 "§LBy combining genetically redesigned 'instinctive knowledge' and outside chemical stimuli, we have succeeded in vastly accelerating our learning capacities. Although it has resulted in some extremely paranoid individuals.§!"
  gene_mentorship_tooltip:0 "ได้รับค่าประสบการณ์ผู้นำ: §G+25%§!"
- trait_expressed_tradition:0 "Expressed Tradition"
+ trait_expressed_tradition:0 "วัฒนธรรมคลั่งสุดโต่ง"
  trait_expressed_tradition_desc:0 "§LFanaticism on demand: faith is merely a cocktail of hormones, one we have perfected. Where that faith eventually leads is a matter of subsequent guidance.§!"
  expressed_tradition_tooltip:0 "£unity£ เอกภาพจาก £pops£ งาน: §G+10%§!"
- trait_elevated_synapses:0 "Elevated Synapses"
+ trait_elevated_synapses:0 "ไซแนปส์ยกระดับ"
  trait_elevated_synapses_desc:0 "§LAs a computational device, a brain does not run at 100% capacity. However, we have gone beyond the standard usage. If issues are encountered, try turning it off and on again.§!"
  elevated_synapses_tooltip:1 "£physics£ Physics Research: §G+20%§!\n£society£ Society Research: §G+20%§!\n£engineering£ Engineering Research: §G+20%§!"
- trait_preplanned_growth:0 "Pre-Planned Growth"
+ trait_preplanned_growth:0 "บังคับการเจริญพันธ์"
  trait_preplanned_growth_desc:1 "§LScheduled fertility, scheduled interest, scheduled compatibility. Population growth on demand for a strong and stable population - with a few minor edits here and there. Jealous individuals are to be directed to the nearest Fertility Center for mandatory training.§!"
  preplanned_growth_tooltip:0 "Pop Growth Speed: §G+30%§!\nPop Housing Usage: §G-10%§!"
- trait_excessive_endurance:0 "Excessive Endurance"
+ trait_excessive_endurance:0 "ทนทานเหลือล้น"
  trait_excessive_endurance_desc:0 "§LThe greatest in adaptability genes have been hyper-expressed in these specimens. Mutation rates around 30% indicate a somewhat stable and successful experiment.§!"
  excessive_endurance_tooltip:0 "การอยู่อาศัยได้: §G+30%§!\nทรัพยากรจากงาน: §G+5%§!"
  edict_damn_the_consequences:0 "อะไรจะเกิดขึ้นก็ช่างมัน"
@@ -654,4 +654,4 @@
  edict_damn_the_consequences_effects:0 "All positive effects from §HOvertuned§! Traits are doubled."
  d_exotic_mountain:0 "Exotic Mountains"
  d_exotic_mountain_desc:0 "Deep within these mountains lie vast reserves of exotic gases - the core of our biology."
- vo_toxoids_voice:0 "Toxoid"
+ vo_toxoids_voice:0 "ทอกซอยด์"
